# cmake-testsetup

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
script/: build_cmake.sh  docker_run_cmake_gcc.bat  docker_run_cmake_gcc.sh  test_cmake.bat  test_cmake.sh
src/: CMakeLists.txt
src/myapp/: CMakeLists.txt  MyApp.cpp
src/mylib/: CMakeLists.txt
src/mylib/mylib/: MyClass.cpp  MyClass.h  MyClass.test.cpp
